jumping issues for section 3

--- a/css/thirdInfo.css
+++ b/css/thirdInfo.css
@@ -1,4 +1,5 @@
 .thirdInfo {
+    overflow: hidden;
     width: inherit;
     border-top: solid black 2px;
     position: relative;
